# retrack

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Dockerfile  Dockerfile.dockerignore  Dockerfile.web-scraper  Dockerfile.web-scraper-camoufox  Dockerfile.web-scraper.dockerignore  Makefile  README.md  SECURITY.md  package-lock.json  package.json
.github/workflows/: ci.yml
.husky/: pre-push
.perf/: config.json  history.jsonl
.sqlx/: query-00268747a4b482f226389f4638f2d574b83f05bf132eb8f569066e0e2c6e5da1.json  query-036863bdff2c695e35bd1c6c9f892f2fb1a8ba23b2c91a5f8af291df76a66ecf.json  query-036f41046b7d248047d24afa0e0b27bef5fc97696eee36134356fc818893098f.json  query-0d31ba1721080391994ddb78be5e0ca33891578b4cdb0b976fe4a3612986f1a6.json  query-10c99810b3a3bdaa99a7da05126ab905ba89a4870a7878c3c34b10a82a23db2b.json  query-11af067a23e26a7e66437ab7624f88c15c4fc4410364e54a308585131a9227af.json  query-120d59e325fd70f0150c7bc30f1221b430a3e007cfa21cbd4015bd6b625fd215.json  query-1495bae56829e4eb2506d6dec8d522a9de1902018c1b781023f0e7f488062dbf.json  query-14db810f6e3fc9d196af4b9c1ef56eb4ae500c2567a045aa6989089ddc6c6a89.json  query-154a8d28ea179f3c6de60856c0d055f9ca3ceaa8719b9ca42144cda192492ee7.json  query-1907fa62f39e878d0b5e869b5df24c3663aae845eaea10f9bccfd477d8a4ced8.json  query-1a5808364d4fd5811898595a358ef516b087b976c8ea8e141b23df7fd2e0fb62.json  query-1aab4dee7368b873479f6dd6b7487987bf9790f57235af60d746389faec9871e.json  query-1b1e967ec03997197d72b8fc80f8d1c068375a13b2f5322103d0ded5b0247752.json  query-1f5f1bd7bc71079ddc23c0f0a01e1db551597605c7088db4b5a7a6add5f9b86b.json  query-1fe98dc198a98a94b90f37aa3ec231114bbd2470d5eb5c2a0697600cc5d6a785.json  query-209a5c284aae5f5f9be3df20d288eb690193efab3ef215c5bfd174437ef89c07.json  query-21b3da396de91f02457eafe3a2e4ab49ebde8a25b671e49245c25d8d92a8953f.json  query-25524d0b44c012ffba5a9d278b1b7ebde17f0cc545d80218773f5108ec59ba28.json  query-2776334043e7e49d32cf4a376bfd1ad5e74fd3893f081229b085f27042852660.json  query-288d4bac28b275913832089f6670c657db90248cdc3093fa851317c9926b17df.json  query-2a85f1fe2f780e887203d542fef00de8474e910a5903cf17e2e83e6915273fe5.json  query-2e20da397ed3f47113d11548cfdff3cd697ed31e6f1b5bc14dd40d95132a33de.json  query-2f46d61cf29c5a97b94892dd526c71a8db9c1d327425ec5c6aaa69f84ea183e1.json  query-468fbb31f29d2e16283fbca2db2d0a864ed589a4303c8035e852037f7c3a0e1b.json  query-46bebd0332ffe00097f2f56250cae9957ac6ebbd3d0cadf327081ec3b450e180.json  query-4b38d342cd22e2e4ee3ad6b7ad2750456365110ce9cb4fddbb13624f77e54141.json  query-4c3226ec70bc9cc628d2b998534472983c70272390770c90a7f7111cf28e0f7a.json  query-4f190720dea8c96ce82ef578bc4586c4dc60ce065d6ef93ae2bec21458d41859.json  query-4f28c9855a87500c39fc4e88308b16b87bf12743e25be5d1707c07edd8d94dfd.json  query-5076aa570d925d5ffdb8527ddb084c725761b65d66695a3ff505aac32a5ee53e.json  query-529d4fa42f83d209a54e1dbec8261267db0284384d0f7b312f0e9db7a0fba3ef.json  query-5541327e96ae99d9dc2b6d5bc99593840379c7b9127f475ff68023677bdc511a.json  query-55b04a8bb93a122a4269d50f3ef0bf53a1481148ff99f1161aff81b36f01cebc.json  query-5a59a1adb44d1977d8c249128231a3a9c47bb4a9dcd71592a9799c2b9ea56f5e.json  query-5c622f5f589318118c2719c33ff656e86bee01e48400502b119f9340b1bd0a0f.json  query-62da289c66f7338113e99cf673bee0a0bbb0240c7127c7325385c9a280c53efa.json  query-66ee4738ba4d98ce9c60ce0ec5ebb553b7f0ba15744f2ddc75f231ee94fdd47a.json  query-672ba88b4bfb1b86277658f66f921d4659d404dce4d642622d8ab929a9a2adb4.json  query-6abc049faf9263b506b330332932f76ac343b66238face76b0dcbfd6df25fd6a.json  (+73 more)
assets/templates/: email_styles.hbs  task_failure_email.hbs  tracker_changes_email.hbs  tracker_changes_error_email.hbs  tracker_check_result_failure_email.hbs  tracker_check_result_success_email.hbs
benches/js-runtime-perf/: Cargo.toml
benches/js-runtime-perf/scripts/: extractor.js  trivial.js
benches/js-runtime-perf/src/: main.rs  measure.rs  scenarios.rs
benches/js-runtime-perf/src/scenarios/: cold_start.rs  common.rs  concurrent_extractors.rs  steady_state_extractor.rs  steady_state_trivial.rs
components/retrack-types/: Cargo.toml
components/retrack-types/src/: lib.rs  scheduler.rs  trackers.rs  utils.rs
components/retrack-types/src/scheduler/: scheduler_job_retry_strategy.rs
components/retrack-types/src/trackers/: page.rs  tracker.rs  tracker_action.rs  tracker_config.rs  tracker_create_params.rs  tracker_data_revision.rs  tracker_data_revision_import_params.rs  tracker_data_value.rs  tracker_debug_existing_params.rs  tracker_debug_params.rs  tracker_debug_result.rs  tracker_execution_log.rs  tracker_execution_log_phase.rs  tracker_execution_log_status.rs  tracker_list_execution_logs_batch_params.rs  tracker_list_execution_logs_params.rs  tracker_list_revisions_batch_params.rs  tracker_list_revisions_params.rs  tracker_target.rs  tracker_update_params.rs  trackers_bulk_get_params.rs  trackers_list_params.rs
components/retrack-types/src/trackers/tracker_action/: email_action.rs  formatter_script_args.rs  formatter_script_result.rs  server_log_action.rs  webhook_action.rs  webhook_action_payload.rs
components/retrack-types/src/trackers/tracker_target/: api_target.rs  page_target.rs  proxy_config.rs
components/retrack-types/src/trackers/tracker_target/api_target/: configurator_script_args.rs  configurator_script_request.rs  configurator_script_result.rs  extractor_script_args.rs  extractor_script_result.rs  target_request.rs  target_response.rs
components/retrack-types/src/trackers/tracker_target/page_target/: extractor_engine.rs
components/retrack-web-scraper/: package-lock.json  package.json  tsconfig.json
components/web_scraper/: .eslintignore  Dockerfile  eslint.config.mjs  package.json  (+1 more)
migrations/: 20240614200000_v0.0.1.sql  20250519174920_v0.0.1.sql  20260308000000_add_tracker_execution_logs.sql  20260406000000_trackers_data_external_storage.sql  20260613124500_v0.0.1.sql
scripts/: analyze-perf.ts  perf-report.html
src/: api.rs  config.rs  database.rs  error.rs  js_runtime.rs  lib.rs  main.rs  network.rs  scheduler.rs  server.rs  tasks.rs  trackers.rs  utils.rs
(+176 files in other folders)
