[package]
name = "retrack"
version = "0.0.1"
authors = ["Aleh Zasypkin <dev@retrack.dev>"]
description = "Tracks changes in a web page, API, or file."
edition = "2024"

[[bin]]
name = "retrack"
path = "src/main.rs"

[workspace]
members = [
    "components/retrack-types"
]

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.12.1"
actix-web-lab = "0.24.3"
anyhow = "1.0.100"
async-stream = "0.3.6"
byte-unit = "5.2.0"
bytes = "1.11.0"
calamine = "0.32.0"
chrono = { version = "0.4.42", default-features = false }
clap = "4.5.53"
croner = "3.0.1"
csv = "1.4.0"
deno_core = "0.372.0"
dotenvy = "0.15.7"
figment = "0.10.19"
futures = "0.3.31"
handlebars = "6.3.2"
http = "1.4.0"
http-cache-reqwest = "0.16.0"
http-serde = "2.1.1"
humantime = "2.3.0"
itertools = "0.14.0"
lettre = { version = "0.11.19", default-features = false }
mediatype = "0.21.0"
postcard = { version = "1.1.3", default-features = false }
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false }
reqwest-middleware = "0.4.2"
reqwest-tracing = "0.5.8"
retrack-types = { path = "components/retrack-types" }
rust-embed = "8.9.0"
rustls = "0.23.35"
serde = "1.0.228"
serde_bytes = "0.11.19"
serde_json = "1.0.145"
serde_with = "3.16.1"
similar = "2.7.0"
sqlx = { version = "0.8.6", default-features = false }
thiserror = "2.0.17"
time = "0.3.44"
tokio = "1.48.0"
tokio-cron-scheduler = "0.15.1"
tracing = "0.1.43"
tracing-actix-web = "0.7.19"
tracing-subscriber = "0.3.22"
trust-dns-resolver = "0.23.2"
url = "2.5.7"
urlencoding = "2.1.3"
utoipa = "5.4.0"
utoipa-rapidoc = "6.0.0"
uuid = "1.19.0"

[dev-dependencies]
httpmock = "0.8.2"
insta = "1.44.3"
test-log = "0.2.19"
toml ="0.9.8"
wg = "0.9.2"

[features]
default = [
    "byte-unit/serde",
    "clap/cargo",
    "clap/env",
    "figment/env",
    "figment/toml",
    "handlebars/rust-embed",
    "insta/filters",
    "insta/json",
    "insta/redactions",
    "insta/toml",
    "lettre/builder",
    "lettre/ring",
    "lettre/rustls-native-certs",
    "lettre/smtp-transport",
    "lettre/tokio1-rustls",
    "mediatype/serde",
    "postcard/use-std",
    "reqwest/http2",
    "reqwest/json",
    "reqwest/rustls-tls-native-roots",
    "reqwest-middleware/json",
    "serde_with/time_0_3",
    "sqlx/json",
    "sqlx/macros",
    "sqlx/migrate",
    "sqlx/runtime-tokio-rustls",
    "sqlx/postgres",
    "sqlx/time",
    "sqlx/uuid",
    "time/formatting",
    "time/macros",
    "tokio/rt-multi-thread",
    "tokio/macros",
    "tokio-cron-scheduler/postgres_storage",
    "tracing-actix-web/uuid_v7",
    "tracing-subscriber/env-filter",
    "tracing-subscriber/json",
    "url/serde",
    "utoipa/actix_extras",
    "utoipa/time",
    "utoipa/url",
    "utoipa/uuid",
    "utoipa-rapidoc/actix-web",
    "uuid/v7",
    "uuid/serde"
]

[profile.release]
strip = true
lto = true
panic = "abort"

[profile.dev]
package.sqlx-macros.opt-level = 3
package.insta.opt-level = 3
package.similar.opt-level = 3


