[package]
name = "retrack"
version = "0.0.1"
authors = ["Aleh Zasypkin <dev@retrack.dev>"]
description = "Tracks changes in a web page, API, or file."
edition = "2024"

[lib]
name = "retrack"
path = "src/lib.rs"

[[bin]]
name = "retrack"
path = "src/main.rs"

[workspace]
members = [
    "benches/js-runtime-perf",
    "components/retrack-types"
]

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.14.0"
actix-web-lab = "0.26.0"
anyhow = "1.0.104"
async-stream = "0.3.6"
byte-unit = "5.2.5"
bytes = "1.12.1"
calamine = "0.36.0"
chrono = { version = "0.4.45", default-features = false }
clap = "4.6.2"
croner = "3.0.1"
csv = "1.4.0"
deno_core = "0.408.0"
dotenvy = "0.15.7"
figment = "0.10.19"
flate2 = "1.1.9"
futures = "0.3.33"
handlebars = "6.4.3"
http = "1.4.2"
http-cache-reqwest = "1.0.0-alpha.6"
http-serde = "2.1.1"
humantime = "2.4.0"
itertools = "0.15.0"
lettre = { version = "0.11.22", default-features = false }
mediatype = "0.21.0"
postcard = { version = "1.1.3", default-features = false }
regex = "1.13.1"
reqwest = "0.13.4"
reqwest-middleware = "0.5.2"
reqwest-tracing = "0.7.1"
retrack-types = { path = "components/retrack-types" }
rust-embed = "8.12.0"
rustls = "0.23.42"
serde = "1.0.229"
serde_bytes = "0.11.19"
serde_json = "1.0.150"
serde_with = "3.21.0"
similar = "3.1.1"
sqlx = { version = "0.9.0", default-features = false }
thiserror = "2.0.19"
time = "0.3.53"
tokio = "1.53.0"
tokio-cron-scheduler = "0.15.1"
tracing = "0.1.44"
tracing-actix-web = "0.7.22"
tracing-subscriber = "0.3.23"
hickory-resolver = "0.26.1"
url = "2.5.8"
urlencoding = "2.1.3"
utoipa = "5.5.0"
utoipa-rapidoc = "6.0.0"
uuid = "1.24.0"

[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator = "0.7.0"

[dev-dependencies]
httpmock = "0.8.3"
insta = "1.48.0"
test-log = "0.2.21"
toml = "1.1.3"
wg = "1.1.0"

[features]
default = [
    "byte-unit/serde",
    "clap/cargo",
    "clap/env",
    "figment/env",
    "figment/toml",
    "handlebars/rust-embed",
    "insta/filters",
    "insta/json",
    "insta/redactions",
    "insta/toml",
    "lettre/builder",
    "lettre/ring",
    "lettre/rustls-native-certs",
    "lettre/smtp-transport",
    "lettre/tokio1-rustls",
    "mediatype/serde",
    "postcard/use-std",
    "reqwest/gzip",
    "reqwest/http2",
    "reqwest/json",
    "reqwest-middleware/json",
    "serde_with/time_0_3",
    "sqlx/json",
    "sqlx/macros",
    "sqlx/migrate",
    "sqlx/runtime-tokio",
    "sqlx/tls-rustls-ring",
    "sqlx/postgres",
    "sqlx/time",
    "sqlx/uuid",
    "time/formatting",
    "time/macros",
    "tokio/rt-multi-thread",
    "tokio/macros",
    "tokio-cron-scheduler/postgres_storage",
    "tracing-actix-web/uuid_v7",
    "tracing-subscriber/env-filter",
    "tracing-subscriber/json",
    "url/serde",
    "utoipa/actix_extras",
    "utoipa/time",
    "utoipa/url",
    "utoipa/uuid",
    "utoipa-rapidoc/actix-web",
    "uuid/v7",
    "uuid/serde"
]

[profile.release]
strip = true
lto = true
panic = "abort"

[profile.dev]
package.sqlx-macros.opt-level = 3
package.insta.opt-level = 3
package.similar.opt-level = 3


