[package]
name = "js-runtime-perf"
version = "0.1.0"
edition = "2024"
publish = false
description = "Performance harness for the Retrack JS runtime."

[[bin]]
name = "js-runtime-perf"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.104"
clap = { version = "4.6.2", features = ["derive"] }
futures = "0.3.33"
hdrhistogram = "7.6.0"
http = "1.4.2"
libc = "0.2.186"
retrack = { path = "../.." }
retrack-types = { path = "../../components/retrack-types" }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.53.0", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
