[package]
name = "retrack-types"
version = "0.1.0"
edition = "2021"

[dependencies]
http = "1.2.0"
http-serde = "2.1.1"
mediatype = "0.19.18"
serde = "1.0.216"
serde_bytes = "0.11.15"
serde_json = "1.0.133"
serde_with = "3.11.0"
time = "0.3.37"
url = "2.5.4"
utoipa = "5.2.0"
uuid = "1.11.0"

[dev-dependencies]
anyhow = "1.0.94"
insta = "1.41.1"

[features]
default = [
    "insta/json",
    "mediatype/serde",
    "serde_with/time_0_3",
    "url/serde",
    "utoipa/time",
    "utoipa/url",
    "utoipa/uuid",
    "uuid/serde"
]
