[package]
name = "retrack-types"
version = "0.1.0"
edition = "2024"

[dependencies]
http = "1.3"
http-serde = "2.1"
mediatype = "0.19"
serde = "1"
serde_bytes = "0.11"
serde_json = "1"
serde_with = "3.12"
time = "0.3"
url = "2.5"
utoipa = "5.3"
uuid = "1.16"

[dev-dependencies]
anyhow = "1.0.98"
insta = "1.43.1"

[features]
default = [
    "insta/json",
    "mediatype/serde",
    "serde_with/time_0_3",
    "url/serde",
    "utoipa/time",
    "utoipa/url",
    "utoipa/uuid",
    "uuid/serde"
]
