[package]
name = "retrack-types"
version = "0.1.0"
edition = "2024"

[dependencies]
byte-unit = "5.2"
http = "1.4"
http-serde = "2.1"
mediatype = "0.21"
serde = "1"
serde_bytes = "0.11"
serde_json = "1"
serde_with = "3.21"
time = "0.3"
url = "2.5"
utoipa = "5.5"
uuid = "1.24"

[dev-dependencies]
anyhow = "1.0.104"
insta = "1.48.0"

[features]
default = [
    "byte-unit/serde",
    "insta/json",
    "mediatype/serde",
    "serde_with/time_0_3",
    "url/serde",
    "utoipa/time",
    "utoipa/url",
    "utoipa/uuid",
    "uuid/serde"
]
